# translucid-template-agent-trace-evaluator

./: .gitignore  DEBRIEF.md.j2  Makefile  README.md  README.md.j2  pyproject.toml  template.yaml  translucid-template.json
.github/workflows/: template-validation.yml
candidate/: DEBRIEF.md  Makefile  README.md  docker-compose.yml  pyproject.toml
candidate/simulators/: fake_agent_runner.py  fake_trace_api.py  otel_trace_sender.py
candidate/src/: evaluator.py  metrics.py  report.py  trace_schema.py
candidate/tests/public/: load_target.py  test_integration_trace_api.py  test_public.py
candidate/traces/: expected_public_scores.json  public_runs.jsonl
docs/: template_progress.md
evaluator/: docker-compose.evaluator.yml  rubric.md  run_hidden.sh  run_public.sh
evaluator/fixtures_hidden/: hidden_cases.json
evaluator/tests_hidden/: load_target.py  test_evidence.py  test_loop_and_escalation.py  test_missing_fields.py  test_stable_report.py  test_wrong_tool_path.py
generators/: generate_fixture.py  scenarios.yaml
metadata/: safety_policy.json  source_mapping_rules.json
solution/: SOLUTION.md.j2
solution/expected/: public_scores.json
solution/src/: __init__.py  cli.py  evaluator.py  metrics.py
solution/tests/: reference_test.py
source-dossiers/: agent-trace-evaluator.md
tools/: expect_candidate_docker_failure.sh  expect_candidate_failure.sh  render_template.py  scan_safety.py  validate_rendered_smoke.sh
