[project]
name = "translucid-template-agent-trace-evaluator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.2"]

[tool.pytest.ini_options]
testpaths = ["candidate/tests/public", "solution/tests", "evaluator/tests_hidden"]
pythonpath = ["."]

